Change Log
==========


2019-07-10 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* idurl fixes in supplier services (#358)
* catch and process "identity-url-changed" event in proxy_router()
* made packetid more unique



2019-07-08 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* IDURL fixes in supplier service



2019-07-07 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* critical bug fix in id_url
* bug fix in online_status.shutdown()
* bug fix in customer/supplier_connector.py
* solved id_url issues in proxy transport
* keep track of identity revisions in id_url and populate always latest revision
* bug fix in DHT code



2019-06-29 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* bug fix in index_synchronizer()
* bug fix in supplier_finder()
* reading my suppliers from DHT during identiy restore
* tried to fix issue with signature verification
* one more issue fixed in proxy_transport() (#351)
* fixed few issues in family_memeber() state machine  (#349)
* added "services/entangled-dht/node-id" setting
* populate DHT constants in networks.json
* fixed "unanswered" Identity() packets
* added "skip_ack" parameter to packet_out()
* changed PacketID format for Identity() & Ack() commands
* good progress with identity rotate (#344)
* added few more makefile regression commands (#342)
* new core module userid/id_url.py added  (#341)
* bug fix in initializer.py (#340)



2019-05-12 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* critical bug fix in CodernityDB3
* chat history fixed to be stored after BitDust process stopped
* a bunch of other Py3 fixes in CodernityDB3 (#338)



2019-05-10 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* workaround fix in CodernityDB  (#336)
* fix in backup_rebuilder when changing supplietrs number
* bug fix in tcp_stream  (#334)


